--- a/src/components/TaskGenerator/TaskGenerator.module.css
+++ b/src/components/TaskGenerator/TaskGenerator.module.css
@@ -11,27 +11,50 @@ form {
   background-color: rgba(0, 89, 255, 0.034) !important;
 }
 .labelsList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   list-style: none;
   padding: 0;
   text-align: center;
   height: fit-content;
   overflow-y: auto;
+  padding: 0.2rem;
+  width: 100%;
 }
 
-.option button {
+.option .labelButton {
+  width: 65%;
   font-size: 0.9rem;
   border: none;
   margin: 0.3rem auto 0.3rem auto;
-  width: 60%;
   border-radius: 5px;
-  transition: width 0.5s;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   text-align: center;
 }
+.option .delButton {
+  margin-top: 4.5px;
+  border: none;
+  background-color: transparent;
+  width: fit-content !important;
+}
+.option {
+  transition: width 0.5s;
+  width: 65%;
+}
+.option.chosen .icon {
+  margin-bottom: 13%;
+  vertical-align: middle;
+}
 
+.option.chosen {
+  position: relative;
+  right: 18px;
+  width: 85%;
+  display: flex;
+}
 .option.chosen button {
   font-weight: bolder;
-  /* border-right: 0.4rem solid black;
-  border-left: 0.4rem solid black; */
+
   width: 80%;
 }
