--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,5 +1,5 @@
 .card {
-  transition: width 0.7s;
+  border-radius: 5px;
   font-size: 0.8rem;
   width: 32%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -7,7 +7,6 @@
     rgba(235, 233, 255, 0.664),
     rgba(240, 240, 240, 0.664)
   );
-  border-radius: 0.7rem;
   margin: 0.5rem;
   height: auto;
   overflow: hidden;
@@ -19,30 +18,37 @@
   margin: 0.5rem;
 }
 .card .header {
+  height: 3rem;
   display: flex;
   justify-content: space-between;
   font-family: 'Open Sans Condensed', sans-serif, 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-
   text-align: center;
   background: #3f51b5;
   width: 100%;
 }
 .card .header button {
+  width: auto;
   border: none;
   margin: 0.8%;
   background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: aliceblue;
 }
 .card .header .icon {
   color: aliceblue;
   border-radius: 5px;
-  padding: 8%;
   margin: 1%;
 }
-.card .header .icon:hover {
+.card .header button:hover {
+  border-radius: 0.2rem;
   background-color: rgba(168, 168, 168, 0.363);
 }
-
+.expanded {
+  width: 80%;
+}
 .mainContent {
   padding: 0.5rem;
 }
@@ -54,9 +60,6 @@
     align-self: center;
   }
 
-  .card .header .icon {
-    display: none;
-  }
   main {
     flex-direction: column;
     width: 100%;
