update card header button hover for mobile

--- a/src/components/Lists/Task/Task.module.css
+++ b/src/components/Lists/Task/Task.module.css
@@ -77,3 +77,8 @@ p {
     width: 95%;
   }
 }
+@media (hover: none) {
+  .buttonsContainer button:hover {
+    background-color: transparent;
+  }
+}
