update card header button hover for mobile

--- a/src/components/Lists/Task/Task.module.css
+++ b/src/components/Lists/Task/Task.module.css
@@ -73,12 +73,10 @@ p {
   line-break: anywhere;
 }
 @media (max-width: 768px) {
+  .buttonsContainer button:focus {
+    background-color: transparent;
+  }
   .task {
     width: 95%;
-  }
-}
-@media (hover: none) {
-  .buttonsContainer button:hover {
-    background-color: transparent;
   }
 }
