update label delete function

--- a/src/components/Lists/Task/Task.module.css
+++ b/src/components/Lists/Task/Task.module.css
@@ -74,6 +74,7 @@ p {
 }
 @media (max-width: 768px) {
   .buttonsContainer button:focus {
+    color: rgba(0, 0, 0, 0.548);
     background-color: transparent;
   }
   .task {
