--- a/src/components/TaskGenerator/TaskGenerator.module.css
+++ b/src/components/TaskGenerator/TaskGenerator.module.css
@@ -2,7 +2,10 @@ form {
   text-align: center;
   height: fit-content;
 }
-
+form p {
+  text-align: left;
+  margin-left: 1rem;
+}
 .formButton {
   margin: 1rem !important;
   text-transform: none !important;
@@ -20,14 +23,15 @@ form {
   height: fit-content;
   overflow-y: auto;
   padding: 0.2rem;
-  width: 100%;
+  width: 90%;
+  margin: auto;
 }
 
 .option .labelButton {
   width: 65%;
   font-size: 0.9rem;
   border: none;
-  margin: 0.3rem auto 0.3rem auto;
+  margin: 0.3rem auto 0.3rem 0;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   text-align: center;
@@ -46,16 +50,22 @@ form {
   margin-bottom: 13%;
   vertical-align: middle;
 }
-.option.chosen.deleteOption {
-  position: relative;
-  right: 18px;
-}
 .option.chosen {
   width: 85%;
   display: flex;
+  position: relative;
+  right: 8px;
 }
 .option.chosen button {
   font-weight: bolder;
-
   width: 80%;
+}
+.option.chosen.default button {
+  margin-left: 12%;
+}
+
+@media (max-width: 768px) {
+  .delButton {
+    margin-left: 0.6rem;
+  }
 }
