--- a/src/components/TaskGenerator/TaskGenerator.module.css
+++ b/src/components/TaskGenerator/TaskGenerator.module.css
@@ -21,22 +21,26 @@ form p {
   padding: 0;
   text-align: center;
   height: fit-content;
-  overflow-y: auto;
+  overflow: hidden;
+
   padding: 0.2rem;
-  width: 90%;
+  width: 100%;
   margin: auto;
 }
 
 .option .labelButton {
   width: 65%;
-  font-size: 0.9rem;
+  font-size: 1rem;
   border: none;
-  margin: 0.3rem auto 0.3rem 0;
+  margin: 0.3rem auto 0.3rem auto;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   text-align: center;
 }
 .option .delButton {
+  position: relative;
+  left: 38px;
+  top: -0.5px;
   margin-top: 4.5px;
   border: none;
   background-color: transparent;
@@ -53,13 +57,12 @@ form p {
 .option.chosen {
   width: 85%;
   display: flex;
-  position: relative;
-  right: 8px;
+  margin-right: 35px;
 }
 .option.chosen button {
   font-weight: bolder;
   width: 85%;
 }
-.option.chosen.default button {
+.default.option.chosen {
   margin-left: 8%;
 }
