--- a/src/components/Lists/Lists.module.css
+++ b/src/components/Lists/Lists.module.css
@@ -7,6 +7,23 @@
 .listCard {
   width: 65%;
 }
+.filterOption {
+  margin: 3%;
+  font-size: 2.5rem;
+  border: none;
+  padding: 0;
+  border-bottom: 4px solid black;
+  font-weight: bolder;
+  border-radius: 5px;
+  width: 100%;
+}
+.filterOptionsList {
+  list-style: none;
+  margin: auto;
+  padding: 0;
+  width: 50%;
+  text-align: center;
+}
 /* width */
 ::-webkit-scrollbar {
   width: 6px;
