--- a/src/components/Lists/Lists.module.css
+++ b/src/components/Lists/Lists.module.css
@@ -8,15 +8,17 @@
 .listCard {
   width: 65%;
 }
-
+.filterOptionsList p {
+  background-image: radial-gradient(circle at center, #3f51b581, transparent);
+  margin: 15% 0 15% 0;
+}
 .filterOption {
   margin: 3%;
   font-size: 2.5rem;
   border: none;
   padding: 0;
-  border-bottom: 4px solid black;
   font-weight: bolder;
-  border-radius: 5px;
+  border-radius: 4rem 0.5rem 4rem 0.5rem;
   width: 100%;
 }
 .filterOptionsList {
