--- a/src/components/Layout/Footer.module.css
+++ b/src/components/Layout/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  font-size: 0.35rem;
+  font-size: 65%;
   background-color: rgba(202, 202, 202, 0.644);
   text-align: center;
   padding: 0.1rem;
