--- a/src/components/Lists/Task/Task.module.css
+++ b/src/components/Lists/Task/Task.module.css
@@ -5,6 +5,8 @@
   display: flex;
 }
 .task {
+  user-select: none;
+  -webkit-user-select: none;
   border-radius: 0.5rem;
   width: 85%;
   margin: auto;
@@ -84,12 +86,11 @@ p,
 .editButton:hover {
   color: goldenrod;
 }
+
 .label {
-  user-select: none;
-  -webkit-user-select: none;
   font-size: 0.8rem;
-  padding: 0.2rem;
-  margin: 0.3rem;
+  padding: 1.5% 2% 1.5% 2%;
+  margin: 2%;
   width: fit-content;
   border-radius: 5px;
 }
